--- a/dev/css/adaptive.css
+++ b/dev/css/adaptive.css
@@ -18,6 +18,7 @@
 	.l_block-top .txt:after { bottom: -40px; }
 	.l_block-top .wrapper { max-width: 715px; }
 	.l_block-top_block__list { margin-bottom: 20px; }
+	.l_block-top_block__item { padding: 7px; }
 
 
 	.l_block-img { background: url(../img/img.jpg) no-repeat scroll center / cover transparent !important; background-position: center !important;}
@@ -69,7 +70,7 @@
 @media  (max-width: 1024px) {
 	.header { height: 634px; }
 
-	.header canvas { width: 1920px !important; height: 634px !important; margin: auto; position: absolute; top: -1000px; right: -1000px; bottom: -1000px; left: -1000px; }
+	.header canvas { width: 1440px !important; height: 634px !important; margin: auto; position: absolute; top: -1000px; right: -1000px; bottom: -1000px; left: -1000px; }
 
 	.l_green__left { flex: 0 0 345px; }
 	.l_green__right { flex: 1 1 auto; }
@@ -88,6 +89,8 @@
 	.l_block-top_block-2 .l_block-top_block__item:nth-child(4) { background-color: rgba(89,66,70,1); }
 	.l_block-top_block-2 .l_block-top_block__item:nth-child(5) { background-color: rgba(52,24,11,1); }
 	.l_block-top_block-2 .l_block-top_block__item:nth-child(6) { background-color: rgba(164,97,54,1); }
+
+	.l_green__in { max-width: 100%; }
 
 }
 			 
@@ -122,11 +125,11 @@
 	.l_block-esp__item:nth-child(2) .l_block-esp__img { margin-left: auto; margin-right: auto; }
 	.l_block-esp__item:nth-child(2) .l_block-esp__color { align-items: center; }
 
-	.char_list { flex-wrap: wrap; justify-content: center; }
-	.char_list__item { flex: 0 0 24%; margin-bottom: 15px; }
+	.char_list { flex-wrap: wrap; justify-content: center; position: relative; }
+	.char_list__item { flex: 0 0 24%; margin-bottom: 15px; position: initial;}
+	.char_list__back { top: 0; bottom :0; }
 
-
-	.calc_block { box-sizing: border-box; flex: 0 0 50%; }
+	.calc_block { box-sizing: border-box; flex: 0 0 370px; padding: 0; margin-bottom: 30px; }
 
 
 	.l_block-text__logo { flex: 0 0 auto; margin-right: auto; margin-left: auto; margin-bottom: 30px; }
@@ -134,6 +137,7 @@
 
 
 	.footer_phone { font-size: 36px; }
+
 
 	
 }
